[package]
name = "bevy_isosurface"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/arcashka/bevy_isosurface"

[dependencies]
bevy = { version = "0.13" }
bytemuck = "1.14"

[dev-dependencies]
bevy-inspector-egui = { version = "0.23" }
bevy_flycam = { version = "0.13" }

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "sphere"
path = "examples/sphere.rs"
