[package]
name = "bevy_isosurface"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/arcashka/bevy_isosurface"

[dependencies]
bevy = { path = "../bevy" }
bytemuck = "1.14"
nonmax = "0.5"
radsort = "0.1"

[dev-dependencies]
bevy-inspector-egui = { path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_flycam = { path = "../bevy_flycam" }

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "sphere"
path = "examples/sphere.rs"
