[package]
name = "bevy_ugr"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/arcashka/bevy_ugr"

[dependencies]
bevy = { path = "../bevy" }
bytemuck = "1.18"
nonmax = "0.5"
radsort = "0.1"

[lints.clippy]
type_complexity = "allow"

[[example]]
name = "sphere"
path = "examples/sphere.rs"
